--- a/Angelo W.F.Silva/pag1.css
+++ b/Angelo W.F.Silva/pag1.css
@@ -49,11 +49,25 @@ ol{
 padding:0px;
 margin:0px;
 }
-
+/*
 img{
 width:250px;
 height:250px;
 float:center;
+}
+*/
+
+.eu, .sft
+{
+  width:250px;
+  height:250px;
+}
+
+.name
+{
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
 }
 
 /*Estilo do menu*/
